.k8s/workload/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-toy-model
  namespace: nsp-toy-model
  labels:
    app: app-toy-model
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5001
    protocol: TCP
    name: http
  selector:
    app: app-toy-model
